--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ license = {text = "MIT"}
 [project.optional-dependencies]
 dev = [
     "ruff>=0.14.0",
+    "mypy>=1.19.0"
 ]
 test = [
     "pytest>=9.0.2",
@@ -26,3 +27,10 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.mypy]
+strict = true
+
+[[tool.mypy.overrides]]
+module = ["telethon.*"]
+ignore_missing_imports = true
